--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <body>
       <div class="navBar">
         <ul><a href="index.html"><img src="logo.png" class="navLogo"></a></ul>
-        <ul>Services</ul>
-        <ul>Testimonials</ul>
-        <ul>About</ul>
-        <ul>Contact</ul>
+        <ul>Services<hr class="navChoice"></ul>
+        <ul>Testimonials<hr class="navChoice"></ul>
+        <ul>About<hr class="navChoice"></ul>
+        <ul>Contact<hr class="navChoice"></ul>
       </div>
+      <!-- <hr class="navHr"> -->
       <div class="welcome">
         <h1><strong>Hi, I'm Eddy. Welcome to my portfolio!</strong></h1>
         <h2>Scroll to learn more about what it is I do</h2>
