--- a/index.html
+++ b/index.html
@@ -20,10 +20,25 @@
         <ul>About<hr class="navChoice"></ul>
         <ul>Contact<hr class="navChoice"></ul>
       </div>
-      <!-- <hr class="navHr"> -->
       <div class="welcome">
-        <h1><strong>Hi, I'm Eddy. Welcome to my portfolio!</strong></h1>
-        <h2>Scroll to learn more about what it is I do</h2>
+        <div class="welcome1-1">
+          <h1>EP Programming</h1>
+          <h2>Professional Web Developer and Software Engineer</h2>
+          <p>Hi! My name is Edward Punzalan but most people call me Eddy! I am a software engineering major at Northwestern College (Orange City, IA). I am a college wrestler and spend most of my time training for my sport or writing code. If you would like to learn more about me click on the about tab above to learn more about me!</p><br>
+          <p>I have experience in the following languages:</p>
+          <ul>Java</ul>
+          <ul>HTML</ul>
+          <ul>CSS</ul>
+          <ul>Javascript</ul>
       </div>
+        <img src="webex.png" class="welcome1-2 webex">
+      </div>
+      <hr class="sectionDiv">
+<!--       <div>
+        <h3>Web Development</h3>
+        <p>Your ideas</p> 
+        <p>+</p> 
+        <p>my programming knowledge = your dream site</p>
+      </div> -->
   </body>
 </html>
